ecmascript/parser/tests/test262-error-references/fail/c86a72939cce6f53.js.stderr
error: Expected 4 hex characters
 --> $DIR/tests/test262-parser/fail/c86a72939cce6f53.js:1:2
  |
1 | "\u
  |  ^^

